# teresa-cli

./: README.md  pyproject.toml  requirements.txt
teresa/: README.md  pyproject.toml
teresa/teresa/: cli.py
