[project]
name = "teresa"
version = "0.1.0"
description = "CLI tool to manage dev containers"
authors = [{ name = "Andy Ngo", email = "andy@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all] >= 0.9.0"
]

[project.scripts]
teresa = "teresa.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
